# fraud_detection

./: .gitignore  pyproject.toml
fraud_detection/: app.py  model.py
fraud_detection/models/: logreg.pickle  treemod.pickle
