[tool.poetry]
name = "fraud-detection"
version = "0.1.0"
description = ""
authors = ["Filip Fijałkowski <filip.fijalkowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-openapi3 = "^4.0.3"
numpy = "^2.1.3"
pydantic = "^2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
